# osmo-iuh

./: .gitignore  .gitreview  Makefile.am  README  README.md  TODO-RELEASE  configure.ac  libosmo-hnbap.pc.in  libosmo-rua.pc.in  libosmo-sabp.pc.in  move-asn1-header-files.sh
doc/examples/: Makefile.am  osmo-hnbgw.cfg
doc/manuals/: Makefile.am  osmohnbgw-usermanual-docinfo.xml  osmohnbgw-usermanual.adoc  osmohnbgw-vty-reference.xml  regen_doc.sh
src/: .gitignore  Makefile  Makefile.am  asn1helpers.c  asn1helpers.h  context_map.c  hnbap.c  hnbap.h  hnbap_common.c  hnbap_common.h  hnbap_const.h  hnbgw.c  hnbgw.h  hnbgw_cn.c  hnbgw_cn.h  hnbgw_hnbap.c  hnbgw_hnbap.h  hnbgw_ranap.c  hnbgw_ranap.h  hnbgw_rua.c  hnbgw_rua.h  hnbgw_sabp.c  hnbgw_vty.c  iu_client.c  iu_client_vty.c  iu_helpers.c  iu_helpers.h  ranap_common.c  ranap_common.h  ranap_common_cn.c  ranap_common_ran.c  ranap_msg_factory.c  ranap_msg_factory.h  regen-common-includes.sh  rua_common.c  rua_common.h  rua_msg_factory.c  sabp_common.c  sabp_server.c  sabp_server.h  (+1 more)
src/asn1c/: Access-stratum-release-indicator.c  Access-stratum-release-indicator.h  AccessResult.c  AccessResult.h  AdditionalNeighbourInfoList.c  AdditionalNeighbourInfoList.h  AltitudeAndDirection.c  AltitudeAndDirection.h  BackoffTimer.c  BackoffTimer.h  BindingID.c  BindingID.h  CELL-FACHMobilitySupport.c  CELL-FACHMobilitySupport.h  CGI.c  CGI.h  CI.c  CI.h  CN-DomainIndicator.c  CN-DomainIndicator.h  CSG-Capability.c  CSG-Capability.h  CSG-ID.c  CSG-ID.h  CSGMembershipStatus.c  CSGMembershipStatus.h  CSGMembershipUpdate.c  CSGMembershipUpdate.h  Cause.c  Cause.h  CauseMisc.c  CauseMisc.h  CauseProtocol.c  CauseProtocol.h  CauseRadioNetwork.c  CauseRadioNetwork.h  CauseTransport.c  CauseTransport.h  CellIdentity.c  CellIdentity.h  (+194 more)
src/hnbap/: .gitignore  Access-stratum-release-indicator.c  AccessResult.c  AdditionalNeighbourInfoList.c  AdditionalNeighbourInfoList.h  AltitudeAndDirection.c  BackoffTimer.c  BindingID.c  CELL-FACHMobilitySupport.c  CGI.c  CI.c  CN-DomainIndicator.c  CSG-Capability.c  CSG-ID.c  CSGMembershipStatus.c  CSGMembershipUpdate.c  Cause.c  Cause.h  CauseMisc.c  CauseProtocol.c  CauseRadioNetwork.c  CauseTransport.c  CellIdentity.c  ConfigurationInformation.c  ConfigurationInformation.h  Context-ID.c  Criticality.c  CriticalityDiagnostics-IE-List.c  CriticalityDiagnostics-IE-List.h  CriticalityDiagnostics.c  CriticalityDiagnostics.h  ESN.c  ErrorIndication.c  ErrorIndication.h  GTP-TEI.c  GeographicalCoordinates.c  GeographicalCoordinates.h  GeographicalLocation.c  GeographicalLocation.h  HNB-Cell-Access-Mode.c  (+239 more)
src/ranap/: Makefile  Makefile.am  RANAP_APN.c  RANAP_AccuracyFulfilmentIndicator.c  RANAP_AllocationOrRetentionPriority.c  RANAP_AllocationOrRetentionPriority.h  RANAP_Alt-RAB-Parameter-ExtendedGuaranteedBitrateInf.c  RANAP_Alt-RAB-Parameter-ExtendedGuaranteedBitrateInf.h  RANAP_Alt-RAB-Parameter-ExtendedGuaranteedBitrateList.c  RANAP_Alt-RAB-Parameter-ExtendedGuaranteedBitrateList.h  RANAP_Alt-RAB-Parameter-ExtendedGuaranteedBitrates.c  RANAP_Alt-RAB-Parameter-ExtendedGuaranteedBitrates.h  RANAP_Alt-RAB-Parameter-ExtendedMaxBitrateInf.c  RANAP_Alt-RAB-Parameter-ExtendedMaxBitrateInf.h  RANAP_Alt-RAB-Parameter-ExtendedMaxBitrateList.c  RANAP_Alt-RAB-Parameter-ExtendedMaxBitrateList.h  RANAP_Alt-RAB-Parameter-ExtendedMaxBitrates.c  RANAP_Alt-RAB-Parameter-ExtendedMaxBitrates.h  RANAP_Alt-RAB-Parameter-GuaranteedBitrateInf.c  RANAP_Alt-RAB-Parameter-GuaranteedBitrateInf.h  RANAP_Alt-RAB-Parameter-GuaranteedBitrateList.c  RANAP_Alt-RAB-Parameter-GuaranteedBitrateList.h  RANAP_Alt-RAB-Parameter-GuaranteedBitrateType.c  RANAP_Alt-RAB-Parameter-GuaranteedBitrates.c  RANAP_Alt-RAB-Parameter-GuaranteedBitrates.h  RANAP_Alt-RAB-Parameter-MaxBitrateInf.c  RANAP_Alt-RAB-Parameter-MaxBitrateInf.h  RANAP_Alt-RAB-Parameter-MaxBitrateList.c  RANAP_Alt-RAB-Parameter-MaxBitrateList.h  RANAP_Alt-RAB-Parameter-MaxBitrateType.c  RANAP_Alt-RAB-Parameter-MaxBitrates.c  RANAP_Alt-RAB-Parameter-MaxBitrates.h  RANAP_Alt-RAB-Parameter-SupportedGuaranteedBitrateInf.c  RANAP_Alt-RAB-Parameter-SupportedGuaranteedBitrateInf.h  RANAP_Alt-RAB-Parameter-SupportedGuaranteedBitrates.c  RANAP_Alt-RAB-Parameter-SupportedGuaranteedBitrates.h  RANAP_Alt-RAB-Parameter-SupportedMaxBitrateInf.c  RANAP_Alt-RAB-Parameter-SupportedMaxBitrateInf.h  RANAP_Alt-RAB-Parameter-SupportedMaxBitrates.c  RANAP_Alt-RAB-Parameter-SupportedMaxBitrates.h  (+913 more)
src/rua/: Makefile  Makefile.am  Makefile.local  RUA_Ansi-41-IDNNS.c  RUA_CN-DomainIndicator.c  RUA_CSGMembershipStatus.c  RUA_Cause.c  RUA_Cause.h  RUA_CauseMisc.c  RUA_CauseProtocol.c  RUA_CauseRadioNetwork.c  RUA_CauseTransport.c  RUA_Connect.c  RUA_Connect.h  RUA_ConnectionlessTransfer.c  RUA_ConnectionlessTransfer.h  RUA_Context-ID.c  RUA_Criticality.c  RUA_CriticalityDiagnostics-IE-List-Value.c  RUA_CriticalityDiagnostics-IE-List.c  RUA_CriticalityDiagnostics-IE-List.h  RUA_CriticalityDiagnostics.c  RUA_CriticalityDiagnostics.h  RUA_DirectTransfer.c  RUA_DirectTransfer.h  RUA_Disconnect.c  RUA_Disconnect.h  RUA_ErrorIndication.c  RUA_ErrorIndication.h  RUA_Establishment-Cause.c  RUA_Gsm-map-IDNNS.c  RUA_Gsm-map-IDNNS.h  RUA_IE-Extensions.c  RUA_IE-Extensions.h  RUA_IE.c  RUA_IE.h  RUA_InitiatingMessage.c  RUA_InitiatingMessage.h  RUA_IntraDomainNasNodeSelector.c  RUA_IntraDomainNasNodeSelector.h  (+16 more)
src/sabp/: Makefile.am  SABP_Available-Bandwidth.c  SABP_Broadcast-Message-Content-Validity-Indicator.c  SABP_Broadcast-Message-Content.c  SABP_Category.c  SABP_Cause.c  SABP_Criticality-Diagnostics.c  SABP_Criticality.c  SABP_CriticalityDiagnostics-IE-List-Value.c  SABP_CriticalityDiagnostics-IE-List.c  SABP_Data-Coding-Scheme.c  SABP_Error-Indication.c  SABP_Failure-List-Item.c  SABP_Failure-List.c  SABP_Failure.c  SABP_IE-Extensions.c  SABP_IE.c  SABP_InitiatingMessage.c  SABP_Kill-Complete.c  SABP_Kill-Failure.c  SABP_Kill.c  SABP_Load-Query-Complete.c  SABP_Load-Query-Failure.c  SABP_Load-Query.c  SABP_Message-Identifier.c  SABP_Message-Status-Query-Complete.c  SABP_Message-Status-Query-Failure.c  SABP_MessageStructure.c  (+36 more)
(+1182 files in other folders)
