ASN_MODULE_SOURCES=	\
	HNBAP_Criticality.c	\
	HNBAP_Presence.c	\
	HNBAP_PrivateIE-ID.c	\
	HNBAP_ProcedureCode.c	\
	HNBAP_ProtocolIE-ID.c	\
	HNBAP_TriggeringMessage.c	\
	HNBAP_IE-Extensions.c	\
	HNBAP_Access-stratum-release-indicator.c	\
	HNBAP_AccessResult.c	\
	HNBAP_AltitudeAndDirection.c	\
	HNBAP_BackoffTimer.c	\
	HNBAP_BindingID.c	\
	HNBAP_Cause.c	\
	HNBAP_CauseRadioNetwork.c	\
	HNBAP_CauseTransport.c	\
	HNBAP_CauseProtocol.c	\
	HNBAP_CauseMisc.c	\
	HNBAP_CellIdentity.c	\
	HNBAP_CELL-FACHMobilitySupport.c	\
	HNBAP_Context-ID.c	\
	HNBAP_CriticalityDiagnostics.c	\
	HNBAP_CriticalityDiagnostics-IE-List.c	\
	HNBAP_CSG-ID.c	\
	HNBAP_CSG-Capability.c	\
	HNBAP_CSGMembershipStatus.c	\
	HNBAP_CGI.c	\
	HNBAP_CI.c	\
	HNBAP_CN-DomainIndicator.c	\
	HNBAP_ESN.c	\
	HNBAP_GeographicalLocation.c	\
	HNBAP_GeographicalCoordinates.c	\
	HNBAP_GTP-TEI.c	\
	HNBAP_HNBCapacity.c	\
	HNBAP_HNB-Cell-Access-Mode.c	\
	HNBAP_HNB-Cell-Identifier.c	\
	HNBAP_HNB-GWResponse.c	\
	HNBAP_HNB-RNL-Identity.c	\
	HNBAP_HNBConfigInfo.c	\
	HNBAP_ConfigurationInformation.c	\
	HNBAP_HNBConfigurationInformationProvided.c	\
	HNBAP_HNBConfigurationInformationMissing.c	\
	HNBAP_HNB-Location-Information.c	\
	HNBAP_HNB-Identity.c	\
	HNBAP_HNB-Identity-Info.c	\
	HNBAP_IMEI.c	\
	HNBAP_IMSI.c	\
	HNBAP_IMSIDS41.c	\
	HNBAP_IMSIESN.c	\
	HNBAP_IP-Address.c	\
	HNBAP_Ipv4Address.c	\
	HNBAP_Ipv6Address.c	\
	HNBAP_Iurh-Signalling-TNL-AddressList.c	\
	HNBAP_LAC.c	\
	HNBAP_LAI.c	\
	HNBAP_MacroCoverageInformation.c	\
	HNBAP_MacroCellID.c	\
	HNBAP_MuxPortNumber.c	\
	HNBAP_NeighbourCellIdentityList.c	\
	HNBAP_NeighbourIdentity.c	\
	HNBAP_NeighbourInfoList.c	\
	HNBAP_AdditionalNeighbourInfoList.c	\
	HNBAP_NeighbourInfoRequestList.c	\
	HNBAP_NeighbourInfoRequestItem.c	\
	HNBAP_PLMNidentity.c	\
	HNBAP_PSC.c	\
	HNBAP_PTMSI.c	\
	HNBAP_PTMSIRAI.c	\
	HNBAP_RAB-ID.c	\
	HNBAP_RABList.c	\
	HNBAP_RABListItem.c	\
	HNBAP_RAC.c	\
	HNBAP_RAI.c	\
	HNBAP_Registration-Cause.c	\
	HNBAP_RNC-ID.c	\
	HNBAP_SAC.c	\
	HNBAP_S-RNTIPrefix.c	\
	HNBAP_TMSILAI.c	\
	HNBAP_TMSIDS41.c	\
	HNBAP_TransportInfo.c	\
	HNBAP_TransportLayerAddress.c	\
	HNBAP_Tunnel-Information.c	\
	HNBAP_TypeOfError.c	\
	HNBAP_UDP-Port-Number.c	\
	HNBAP_UE-Capabilities.c	\
	HNBAP_UTRANCellID.c	\
	HNBAP_UE-Identity.c	\
	HNBAP_Update-cause.c	\
	HNBAP_URAIdentityList.c	\
	HNBAP_URAIdentity.c	\
	HNBAP_U-RNTI.c	\
	HNBAP_UnknownU-RNTIIndication.c	\
	HNBAP_HNBAP-PDU.c	\
	HNBAP_InitiatingMessage.c	\
	HNBAP_SuccessfulOutcome.c	\
	HNBAP_UnsuccessfulOutcome.c	\
	HNBAP_HNBRegisterRequest.c	\
	HNBAP_HNBRegisterAccept.c	\
	HNBAP_HNBRegisterReject.c	\
	HNBAP_UERegisterRequest.c	\
	HNBAP_UERegisterAccept.c	\
	HNBAP_UERegisterReject.c	\
	HNBAP_UEDe-Register.c	\
	HNBAP_HNBDe-Register.c	\
	HNBAP_ErrorIndication.c	\
	HNBAP_CSGMembershipUpdate.c	\
	HNBAP_TNLUpdateRequest.c	\
	HNBAP_TNLUpdateResponse.c	\
	HNBAP_TNLUpdateFailure.c	\
	HNBAP_HNBConfigTransferRequest.c	\
	HNBAP_HNBConfigTransferResponse.c	\
	HNBAP_RelocationComplete.c	\
	HNBAP_U-RNTIQueryRequest.c	\
	HNBAP_U-RNTIQueryResponse.c	\
	HNBAP_PrivateMessage.c	\
	HNBAP_IE.c

ASN_MODULE_INC=	\
	HNBAP_Criticality.h	\
	HNBAP_Presence.h	\
	HNBAP_PrivateIE-ID.h	\
	HNBAP_ProcedureCode.h	\
	HNBAP_ProtocolIE-ID.h	\
	HNBAP_TriggeringMessage.h	\
	HNBAP_IE-Extensions.h	\
	HNBAP_Access-stratum-release-indicator.h	\
	HNBAP_AccessResult.h	\
	HNBAP_AltitudeAndDirection.h	\
	HNBAP_BackoffTimer.h	\
	HNBAP_BindingID.h	\
	HNBAP_Cause.h	\
	HNBAP_CauseRadioNetwork.h	\
	HNBAP_CauseTransport.h	\
	HNBAP_CauseProtocol.h	\
	HNBAP_CauseMisc.h	\
	HNBAP_CellIdentity.h	\
	HNBAP_CELL-FACHMobilitySupport.h	\
	HNBAP_Context-ID.h	\
	HNBAP_CriticalityDiagnostics.h	\
	HNBAP_CriticalityDiagnostics-IE-List.h	\
	HNBAP_CSG-ID.h	\
	HNBAP_CSG-Capability.h	\
	HNBAP_CSGMembershipStatus.h	\
	HNBAP_CGI.h	\
	HNBAP_CI.h	\
	HNBAP_CN-DomainIndicator.h	\
	HNBAP_ESN.h	\
	HNBAP_GeographicalLocation.h	\
	HNBAP_GeographicalCoordinates.h	\
	HNBAP_GTP-TEI.h	\
	HNBAP_HNBCapacity.h	\
	HNBAP_HNB-Cell-Access-Mode.h	\
	HNBAP_HNB-Cell-Identifier.h	\
	HNBAP_HNB-GWResponse.h	\
	HNBAP_HNB-RNL-Identity.h	\
	HNBAP_HNBConfigInfo.h	\
	HNBAP_ConfigurationInformation.h	\
	HNBAP_HNBConfigurationInformationProvided.h	\
	HNBAP_HNBConfigurationInformationMissing.h	\
	HNBAP_HNB-Location-Information.h	\
	HNBAP_HNB-Identity.h	\
	HNBAP_HNB-Identity-Info.h	\
	HNBAP_IMEI.h	\
	HNBAP_IMSI.h	\
	HNBAP_IMSIDS41.h	\
	HNBAP_IMSIESN.h	\
	HNBAP_IP-Address.h	\
	HNBAP_Ipv4Address.h	\
	HNBAP_Ipv6Address.h	\
	HNBAP_Iurh-Signalling-TNL-AddressList.h	\
	HNBAP_LAC.h	\
	HNBAP_LAI.h	\
	HNBAP_MacroCoverageInformation.h	\
	HNBAP_MacroCellID.h	\
	HNBAP_MuxPortNumber.h	\
	HNBAP_NeighbourCellIdentityList.h	\
	HNBAP_NeighbourIdentity.h	\
	HNBAP_NeighbourInfoList.h	\
	HNBAP_AdditionalNeighbourInfoList.h	\
	HNBAP_NeighbourInfoRequestList.h	\
	HNBAP_NeighbourInfoRequestItem.h	\
	HNBAP_PLMNidentity.h	\
	HNBAP_PSC.h	\
	HNBAP_PTMSI.h	\
	HNBAP_PTMSIRAI.h	\
	HNBAP_RAB-ID.h	\
	HNBAP_RABList.h	\
	HNBAP_RABListItem.h	\
	HNBAP_RAC.h	\
	HNBAP_RAI.h	\
	HNBAP_Registration-Cause.h	\
	HNBAP_RNC-ID.h	\
	HNBAP_SAC.h	\
	HNBAP_S-RNTIPrefix.h	\
	HNBAP_TMSILAI.h	\
	HNBAP_TMSIDS41.h	\
	HNBAP_TransportInfo.h	\
	HNBAP_TransportLayerAddress.h	\
	HNBAP_Tunnel-Information.h	\
	HNBAP_TypeOfError.h	\
	HNBAP_UDP-Port-Number.h	\
	HNBAP_UE-Capabilities.h	\
	HNBAP_UTRANCellID.h	\
	HNBAP_UE-Identity.h	\
	HNBAP_Update-cause.h	\
	HNBAP_URAIdentityList.h	\
	HNBAP_URAIdentity.h	\
	HNBAP_U-RNTI.h	\
	HNBAP_UnknownU-RNTIIndication.h	\
	HNBAP_HNBAP-PDU.h	\
	HNBAP_InitiatingMessage.h	\
	HNBAP_SuccessfulOutcome.h	\
	HNBAP_UnsuccessfulOutcome.h	\
	HNBAP_HNBRegisterRequest.h	\
	HNBAP_HNBRegisterAccept.h	\
	HNBAP_HNBRegisterReject.h	\
	HNBAP_UERegisterRequest.h	\
	HNBAP_UERegisterAccept.h	\
	HNBAP_UERegisterReject.h	\
	HNBAP_UEDe-Register.h	\
	HNBAP_HNBDe-Register.h	\
	HNBAP_ErrorIndication.h	\
	HNBAP_CSGMembershipUpdate.h	\
	HNBAP_TNLUpdateRequest.h	\
	HNBAP_TNLUpdateResponse.h	\
	HNBAP_TNLUpdateFailure.h	\
	HNBAP_HNBConfigTransferRequest.h	\
	HNBAP_HNBConfigTransferResponse.h	\
	HNBAP_RelocationComplete.h	\
	HNBAP_U-RNTIQueryRequest.h	\
	HNBAP_U-RNTIQueryResponse.h	\
	HNBAP_PrivateMessage.h	\
	HNBAP_IE.h

AM_CFLAGS = -I$(top_srcdir)/include $(ASN1C_CFLAGS) $(OSMOCORE_CFLAGS)

HNBAP_ASN1 = $(top_srcdir)/asn1/hnbap

noinst_LTLIBRARIES=libosmo-asn1-hnbap.la
libosmo_asn1_hnbap_la_SOURCES=$(ASN_MODULE_SOURCES)
libosmo_asn1_hnbap_la_LIBADD=$(ASN1C_LDADD)

regen: regenerate-from-asn1-source

regenerate-from-asn1-source:
	ASN1C_PREFIX="HNBAP_" asn1c \
		-R \
		-fcompound-names \
		-gen-PER \
		$(HNBAP_ASN1)/HNBAP-CommonDataTypes.asn \
		$(HNBAP_ASN1)/HNBAP-Constants.asn \
		$(HNBAP_ASN1)/HNBAP-IEs.asn \
		$(HNBAP_ASN1)/HNBAP-PDU.asn
#	change include style to `#include <dir/foo.h>'
	$(top_srcdir)/move-asn1-header-files.sh osmocom/hnbap $(ASN_MODULE_INC)
#	Finally copy *.c from buildir to srcdir:
	if test "$(realpath $(CURDIR))" != "$(realpath $(top_srcdir)/src/hnbap)"; then \
		cp *.c $(top_srcdir)/src/hnbap/; \
	fi
